# ClaudeFastAPIApp

./: .claudeignore  CLAUDE.md  pyproject.toml
src/my_package/: main.py
tests/: test_main.py
